@@ -161,6 +161,20 @@ $add['edit_entry_grid'] = array(
 
 /**
  * ====================================================
+ * Blog > Post Layout: Default
+ * ====================================================
+ */
+
+$add['entry_read_more_text'] = array(
+	array(
+		'setting'  => 'entry_read_more_display',
+		'operator' => '!=',
+		'value'    => '',
+	),
+);
+
+/**
+ * ====================================================
  * Blog > Post Layout: Grid
  * ====================================================
  */
