@@ -61,16 +61,7 @@ if ( ! defined( 'ABSPATH' ) ) exit;
 			}
 			// If it's included in a posts archive page.
 			else {
-				// Print excerpt if specified.
-				if ( has_excerpt() ) {
-					the_excerpt();
-				}
-				// Print full content.
-				else {
-					the_content(
-						apply_filters( 'suki/frontend/read_more_text', esc_html__( 'Continue Reading', 'suki' ) ) . the_title( ' <span class="screen-reader-text">', '</span>', false )
-					);
-				}
+				the_excerpt();
 			}
 			
 			/**
